--- a/styles.css
+++ b/styles.css
@@ -113,16 +113,27 @@ button:hover {
 	height: 25vh;
 }
 
+/* ARTICLE BOTTOM */
 .article-bottom {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	align-content: space-around;
 	height: 50vh;
+	font: 1.2em "Gill Sans", sans-serif;
+	/* margin-bottom: 20px; */
 }
 
 .group-styler {
-	margin-bottom: 15px;
+	margin-bottom: 10px;
+}
+
+.website {
+	background-color: #f2ecbaff;
+	color: #7e846bff;
+	text-decoration: none;
+	padding-left: 5px;
+	padding-top: 5px;
+	width: auto;
+	height: 40px;
 }
 
 .txt-1 {
@@ -185,7 +196,20 @@ article {
 	height: 28vh;
 }
 
+.txt-2 {
+	font-size: 1.1em;
+}
+
 .txt-1 {
 	font-size: 1.5em;
+}
+
+.group-styler {
+	margin-bottom: 50px;
+}
+
+.website {
+	height: 60px;
+	font-size: 1.2em;
 }
 }
