--- a/styles.css
+++ b/styles.css
@@ -83,8 +83,9 @@ h1 {
 }
 
 h2{
-	font: 1.8em "Gill Sans", sans-serif;
+	font: 2.3em "Gill Sans", sans-serif;
 	color: #31231eff;
+	margin: 12px 0px 30px 5px;
 }
 
 span {
@@ -92,12 +93,17 @@ span {
 	font-size: 3em;
 }
 
+main {
+	padding: 20px;
+}
+
+
 article {
 	display: flex;
 	flex-direction: column;
 	background-color: #31231eff;
-	width: 20vw;
-	height: 50vh;
+	width: 24vw;
+	/* height: 50vh; */
 	margin-bottom: 10px;
 	box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 0.4);
 }
@@ -128,6 +134,12 @@ button:hover {
 }
 
 /* ARTICLE TOP */
+.article-container {
+	display: flex;
+	flex-wrap: wrap;
+	width: 90vw;
+}
+
 .article-top {
 	display: flex;
 	justify-content: space-between;
@@ -142,7 +154,7 @@ button:hover {
 .article-bottom {
 	display: flex;
 	flex-direction: column;
-	height: 50vh;
+	height: 35vh;
 	font: 1.2em "Gill Sans", sans-serif;
 	padding: 10px;
 	/* margin-bottom: 20px; */
@@ -184,7 +196,8 @@ h1 {
 }
 
 h2{
-	margin: 10px 0px 5px 10px;
+	font-size: 1.2em;
+	margin: 12px 0px 7px 19px;
 }
 
 img {
@@ -216,6 +229,10 @@ button:nth-child(2){
 	margin-right: 10px;
 }
 
+main {
+	padding: 10px;
+}
+
 /* .user-login-container > button {
 	font-size: .7em;
 } */
@@ -226,6 +243,7 @@ button:nth-child(2){
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	width: 90vw;
 }
 
 
@@ -237,6 +255,10 @@ article {
 .article-top {
 	background-size: 80vw 28vh;
 	height: 28vh;
+}
+
+.article-bottom {
+	height: 25vh;
 }
 
 .txt-2 {
