--- a/styles.css
+++ b/styles.css
@@ -45,14 +45,13 @@ header {
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
-	/* height: 20vh; */
 	height: 157px;
 }
 
 nav {
   display: flex;
   align-items: flex-end;
-	padding-bottom: 15px;
+	padding-bottom: 27px;
 	padding-left: 20px;
 }
 
@@ -60,7 +59,6 @@ button {
 	background: none;
 	border: none;
 	display: flex;
-	/* font-size: 1.2em; */
 }
 
 nav > button {
@@ -70,7 +68,7 @@ nav > button {
 
 button > 	p {
 	padding-top: 7px;
-	font-size: 1em;
+	font-size: 1.2em;
 }
 
 img {
@@ -117,7 +115,7 @@ article {
 .user-login-container {
 	display: flex;
 	justify-content: flex-end;
-	margin-top: 20px;
+	margin-top: 5px;
 }
 
 /* .user-login-container > button {
@@ -260,9 +258,9 @@ main {
 	padding: 10px;
 }
 
-/* .user-login-container > button {
-	font-size: .7em;
-} */
+.user-login-container {
+	margin-top: 20px;
+}
 
 /* MAIN */
 
